# Ice

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: config.cmake
kernel/: CMakeLists.txt  kernel.cpp  kmain.cpp
kernel/arch/x86_64/cpu/: cpu.cpp  pic.cpp
kernel/arch/x86_64/gdt/: gdt.asm  gdt.cpp
kernel/arch/x86_64/idt/: idt.asm  idt.cpp
kernel/arch/x86_64/interrupts/: idt.asm  idt.cpp  isr.asm  isr.cpp
kernel/arch/x86_64/memory/: virtual.cpp
kernel/drivers/graphics/: printf.cpp  terminal.cpp
kernel/include/: kernel.h  kernel.hpp
kernel/include/arch/: arch.hpp
kernel/include/arch/x86_64/cpu/: cpu.hpp  pic.hpp
kernel/include/arch/x86_64/gdt/: gdt.hpp
kernel/include/arch/x86_64/idt/: idt.hpp
kernel/include/arch/x86_64/interrupts/: idt.hpp  isr.hpp
kernel/include/common/: math.hpp
kernel/include/drivers/graphics/: printf.h  terminal.hpp
kernel/include/libs/libc/: assert.h  ctype.h  stdio.h  stdlib.h  string.h
kernel/include/libs/libc++/: allocator  atomic  cassert  cctype  cstddef  cstdint  cstdio  cstdlib  cstring  iterator  memory  mutex  new  optional  source_location  tuple  type_traits  utility  vector
kernel/include/libs/std/: algorithm  functional  initializer_list  memory  new  type_traits
kernel/include/memory/: memory.hpp  physical.hpp  virtual.hpp
kernel/include/sys/: logger.hpp  panic.hpp
kernel/include/utils/: bitmap.hpp  math.hpp
kernel/libs/libc/: ctype.cpp  stdio.cpp  stdlib.cpp  string.cpp
kernel/memory/: memmap.cpp  memory.cpp  physical.cpp  virtual.cpp
kernel/sys/: logger.cpp  panic.cpp
kernel/utils/: bitmap.cpp
scripts/boot/: limine.cfg
